--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "code-style": "npm run format && npm run lint:fix"
   },
   "dependencies": {
+    "@types/joi": "^17.2.3",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.6",
@@ -31,6 +32,7 @@
     "firebase-admin": "^13.0.2",
     "formidable": "^3.5.2",
     "http-status-codes": "^2.3.0",
+    "joi": "^18.0.0",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "pg": "^8.13.1",
@@ -40,7 +42,8 @@
     "reflect-metadata": "^0.2.1",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
-    "typeorm": "^0.3.20"
+    "typeorm": "^0.3.20",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@jest/test-sequencer": "^29.7.0",
@@ -59,6 +62,7 @@
     "@types/supertest": "^6.0.2",
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-express": "^4.1.8",
+    "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "^7.3.1",
     "@typescript-eslint/parser": "^7.3.1",
     "eslint": "^8.57.1",
