--- a/.github/workflows/feature-pr.yml
+++ b/.github/workflows/feature-pr.yml
@@ -16,18 +16,43 @@ permissions:
   checks: write
 
 jobs:
-  create-pr:
-    name: 創建 Pull Request
+  setup-pr:
+    name: 設置 Pull Request
     runs-on: ubuntu-latest
     outputs:
-      pr-number: ${{ steps.create-pr.outputs.pr_number }}
-      pr-created: ${{ steps.create-pr.outputs.pr_created }}
+      pr-number: ${{ steps.get-pr.outputs.pr_number }}
+      pr-exists: ${{ steps.get-pr.outputs.pr_exists }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Create Pull Request to develop
+      - name: 檢查是否已存在 PR
+        id: get-pr
+        uses: actions/github-script@v7
+        with:
+          script: |
+            const { data: pulls } = await github.rest.pulls.list({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              head: `${context.repo.owner}:${context.ref.replace('refs/heads/', '')}`,
+              base: 'develop',
+              state: 'open'
+            });
+
+            if (pulls.length > 0) {
+              // PR 已存在
+              console.log(`✅ 找到現有 PR: #${pulls[0].number}`);
+              core.setOutput('pr_number', pulls[0].number);
+              core.setOutput('pr_exists', 'true');
+            } else {
+              // 需要創建新 PR
+              console.log('📝 需要創建新的 PR');
+              core.setOutput('pr_exists', 'false');
+            }
+
+      - name: 創建新的 Pull Request
         id: create-pr
+        if: steps.get-pr.outputs.pr_exists == 'false'
         uses: repo-sync/pull-request@v2
         with:
           source_branch: ${{ github.ref_name }}
@@ -53,11 +78,15 @@ jobs:
           pr_label: 'feature'
           github_token: ${{ secrets.GITHUB_TOKEN }}
 
+      - name: 設置新創建的 PR 編號
+        if: steps.get-pr.outputs.pr_exists == 'false' && steps.create-pr.outputs.pr_number
+        run: echo "pr_number=${{ steps.create-pr.outputs.pr_number }}" >> $GITHUB_OUTPUT
+
   ci-checks:
     name: CI 檢查 (Lint & Test)
     runs-on: ubuntu-latest
-    needs: create-pr
-    if: needs.create-pr.outputs.pr-created == 'true'
+    needs: setup-pr
+    # 🔧 修改條件：只要有 PR 就執行（不管是新建還是現有的）
 
     # 🔧 新增 PostgreSQL 服務
     services:
@@ -121,8 +150,9 @@ jobs:
         uses: actions/github-script@v7
         with:
           script: |
+            const prNumber = ${{ needs.setup-pr.outputs.pr-number }};
             github.rest.issues.createComment({
-              issue_number: ${{ needs.create-pr.outputs.pr-number }},
+              issue_number: prNumber,
               owner: context.repo.owner,
               repo: context.repo.repo,
               body: `## ✅ CI 檢查通過
@@ -143,8 +173,9 @@ jobs:
         uses: actions/github-script@v7
         with:
           script: |
+            const prNumber = ${{ needs.setup-pr.outputs.pr-number }};
             github.rest.issues.createComment({
-              issue_number: ${{ needs.create-pr.outputs.pr-number }},
+              issue_number: prNumber,
               owner: context.repo.owner,
               repo: context.repo.repo,
               body: `## ❌ CI 檢查失敗
@@ -167,7 +198,7 @@ jobs:
   auto-merge:
     name: 自動合併到 develop
     runs-on: ubuntu-latest
-    needs: [create-pr, ci-checks]
+    needs: [setup-pr, ci-checks]
     if: needs.ci-checks.result == 'success'
 
     steps:
@@ -176,17 +207,18 @@ jobs:
         with:
           github-token: ${{ secrets.PAT_TOKEN }} # 使用 PAT 代替 GITHUB_TOKEN
           script: |
+            const prNumber = ${{ needs.setup-pr.outputs.pr-number }};
             const { data: pr } = await github.rest.pulls.get({
               owner: context.repo.owner,
               repo: context.repo.repo,
-              pull_number: ${{ needs.create-pr.outputs.pr-number }}
+              pull_number: prNumber
             });
 
             if (pr.mergeable && pr.state === 'open') {
               await github.rest.pulls.merge({
                 owner: context.repo.owner,
                 repo: context.repo.repo,
-                pull_number: ${{ needs.create-pr.outputs.pr-number }},
+                pull_number: prNumber,
                 commit_title: `Auto merge: ${pr.title}`,
                 commit_message: `自動合併 ${pr.head.ref} 到 develop\n\n✅ 通過所有 CI 檢查後自動合併\n- Lint 檢查通過\n- 測試執行成功\n- 建置測試完成`,
                 merge_method: 'squash'
