--- a/.github/workflows/feature-pr.yml
+++ b/.github/workflows/feature-pr.yml
@@ -121,19 +121,6 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      # 🔧 新增：重置資料庫確保乾淨狀態
-      - name: Reset Database
-        run: |
-          echo "🗃️ 重置測試資料庫..."
-          # 等待 PostgreSQL 服務完全啟動
-          sleep 2
-          # 刪除並重新建立測試資料庫以確保乾淨狀態
-          PGPASSWORD=test_password psql -h localhost -U test_user -d postgres -c "DROP DATABASE IF EXISTS test_db;"
-          PGPASSWORD=test_password psql -h localhost -U test_user -d postgres -c "CREATE DATABASE test_db;"
-          echo "✅ 資料庫重置完成"
-        env:
-          PGPASSWORD: test_password
-
       - name: Run Lint
         run: |
           echo "🔍 執行 Lint 檢查..."
@@ -162,7 +149,7 @@ jobs:
       - name: Run Tests
         run: |
           echo "🧪 執行測試..."
-          npm test -- --runInBand --forceExit
+          npm test -- --runInBand --maxWorkers=1
           echo "✅ 測試通過"
         env:
           NODE_ENV: test
