🔧 chore: 更新 GitHub Actions 工作流程以顯示 PR 編號
調整項目：
1. 在設置新創建的 PR 編號步驟中新增 ID，以便後續引用。
2. 增加顯示 PR 編號的回饋訊息，提升可讀性與除錯便利性。

--- a/.github/workflows/feature-pr.yml
+++ b/.github/workflows/feature-pr.yml
@@ -77,9 +77,11 @@ jobs:
           github_token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: 設置新創建的 PR 編號
+        id: set-pr-number
         if: steps.get-pr.outputs.pr_exists == 'false' && steps.create-pr.outputs.pr_number
         run: |
           echo "pr_number=${{ steps.create-pr.outputs.pr_number }}" >> $GITHUB_OUTPUT
+          echo "PR 編號已設定: ${{ steps.create-pr.outputs.pr_number }}"
 
       - name: 顯示 PR 資訊 (除錯用)
         run: |
