♻️ refactor: 暫時禁用自動合併功能以進行調整
因應未來的功能調整，暫時將自動合併到 develop 的工作流程註解掉，以避免不必要的合併操作。

--- a/.github/workflows/feature-pr.yml
+++ b/.github/workflows/feature-pr.yml
@@ -247,49 +247,49 @@ jobs:
               🤖 由 GitHub Actions 自動檢查`
             });
 
-  auto-merge:
-    name: 自動合併到 develop
-    runs-on: ubuntu-latest
-    needs: [setup-pr, ci-checks]
-    if: needs.ci-checks.result == 'success' && needs.setup-pr.outputs.pr-number
+  # auto-merge:
+  #   name: 自動合併到 develop
+  #   runs-on: ubuntu-latest
+  #   needs: [setup-pr, ci-checks]
+  #   if: needs.ci-checks.result == 'success' && needs.setup-pr.outputs.pr-number
 
-    steps:
-      - name: Auto merge PR
-        uses: actions/github-script@v7
-        with:
-          github-token: ${{ secrets.PAT_TOKEN }}
-          script: |
-            const prNumber = parseInt('${{ needs.setup-pr.outputs.pr-number }}');
+  #   steps:
+  #     - name: Auto merge PR
+  #       uses: actions/github-script@v7
+  #       with:
+  #         github-token: ${{ secrets.PAT_TOKEN }}
+  #         script: |
+  #           const prNumber = parseInt('${{ needs.setup-pr.outputs.pr-number }}');
 
-            const { data: pr } = await github.rest.pulls.get({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              pull_number: prNumber
-            });
+  #           const { data: pr } = await github.rest.pulls.get({
+  #             owner: context.repo.owner,
+  #             repo: context.repo.repo,
+  #             pull_number: prNumber
+  #           });
 
-            if (pr.mergeable && pr.state === 'open') {
-              await github.rest.pulls.merge({
-                owner: context.repo.owner,
-                repo: context.repo.repo,
-                pull_number: prNumber,
-                commit_title: `Auto merge: ${pr.title}`,
-                commit_message: `自動合併 ${pr.head.ref} 到 develop\n\n✅ 通過所有 CI 檢查後自動合併\n- Lint 檢查通過\n- 測試執行成功\n- 建置測試完成`,
-                merge_method: 'squash'
-              });
-              
-              console.log('✅ 成功自動合併到 develop 分支');
-            }
+  #           if (pr.mergeable && pr.state === 'open') {
+  #             await github.rest.pulls.merge({
+  #               owner: context.repo.owner,
+  #               repo: context.repo.repo,
+  #               pull_number: prNumber,
+  #               commit_title: `Auto merge: ${pr.title}`,
+  #               commit_message: `自動合併 ${pr.head.ref} 到 develop\n\n✅ 通過所有 CI 檢查後自動合併\n- Lint 檢查通過\n- 測試執行成功\n- 建置測試完成`,
+  #               merge_method: 'squash'
+  #             });
 
-      - name: Trigger develop-to-main workflow
-        if: success()
-        uses: actions/github-script@v7
-        with:
-          github-token: ${{ secrets.PAT_TOKEN }}
-          script: |
-            await github.rest.actions.createWorkflowDispatch({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              workflow_id: 'develop-to-main.yml',
-              ref: 'develop'
-            });
-            console.log('✅ 已觸發 develop-to-main 工作流程');
+  #             console.log('✅ 成功自動合併到 develop 分支');
+  #           }
+
+  #     - name: Trigger develop-to-main workflow
+  #       if: success()
+  #       uses: actions/github-script@v7
+  #       with:
+  #         github-token: ${{ secrets.PAT_TOKEN }}
+  #         script: |
+  #           await github.rest.actions.createWorkflowDispatch({
+  #             owner: context.repo.owner,
+  #             repo: context.repo.repo,
+  #             workflow_id: 'develop-to-main.yml',
+  #             ref: 'develop'
+  #           });
+  #           console.log('✅ 已觸發 develop-to-main 工作流程');
