--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "supertest": "^7.0.0",
     "ts-jest": "^29.4.1",
     "ts-node": "^10.9.2",
+    "tsconfig-paths": "^4.2.0",
     "typescript": "^5.4.2"
   }
 }
