♻️ refactor: 調整 Dockerfile 以簡化生產環境建置流程
變更項目：
1. 移除 tsconfig.json 和 tsconfig.prod.json 的複製步驟，簡化 Dockerfile。
2. 移除 tsconfig-paths 的安裝，直接使用 Node.js 啟動應用程式。
3. 更新 build 腳本，將 tsc-alias 整合進建置過程中。
4. 刪除 www.ts 中的 tsconfig-paths 註冊，簡化啟動邏輯。

這些變更旨在提升 Docker 映像的建置效率，並減少不必要的依賴。

--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "stop": "docker compose --env-file .env stop",
     "clean": "docker compose --env-file .env down -v",
     "test": "node_modules/.bin/jest",
-    "dev": "ts-node ./src/bin/www.ts",
-    "build": "tsc",
+    "dev": "ts-node -r tsconfig-paths/register ./src/bin/www.ts",
+    "build": "tsc && tsc-alias",
     "start:prod": "node dist/src/bin/www.js",
     "init:schema": "typeorm schema:sync -d ./dist/db/data-source.js",
     "lint": "eslint .",
@@ -42,7 +42,6 @@
     "reflect-metadata": "^0.2.1",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
-    "tsconfig-paths": "^4.2.0",
     "typeorm": "^0.3.20",
     "uuid": "^11.1.0"
   },
@@ -79,6 +78,8 @@
     "supertest": "^7.0.0",
     "ts-jest": "^29.4.1",
     "ts-node": "^10.9.2",
+    "tsc-alias": "^1.8.16",
+    "tsconfig-paths": "^4.2.0",
     "typescript": "^5.4.2"
   }
 }
