✨ feat: 新增資料庫種子資料功能，初始化主分類、次分類與城市資料
為了方便開發與測試，新增資料庫種子資料功能，包含主分類、次分類及城市資料的初始化。這些資料將用於系統的基本參考資料，確保開發環境的完整性。

調整項目：
1. 新增 `MainCategorySeed`、`SubCategorySeed` 和 `CitySeed` 類別，負責各自資料的初始化。
2. 更新 `DatabaseSeeder` 類別，按順序執行種子資料。
3. 更新 `seed-database.ts` 腳本，整合資料庫連線與種子資料執行邏輯。
4. 更新 `README.md`，提供種子資料的使用說明與檔案結構。

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "build": "tsc && tsc-alias",
     "start:prod": "node dist/src/bin/www.js",
     "init:schema": "typeorm schema:sync -d ./dist/db/data-source.js",
+    "db:seed": "ts-node -r tsconfig-paths/register ./src/scripts/seed-database.ts",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "lint:check": "eslint . --max-warnings 0",
