✨ feat: 實作 Firebase Storage 檔案上傳完整功能
新增功能：
1. Firebase Storage 雲端檔案上傳系統
   - 支援單檔案和多檔案上傳（最多5個檔案，單檔最大10MB）
   - 支援多種檔案格式：圖片（JPEG, PNG, GIF, WebP）和文件（PDF, DOC, TXT）
   - 自動生成 UUID 檔名，防止檔名衝突
   - 支援檔案分類管理

2. 完整的 API 端點
   - POST /api/files/upload - 上傳檔案
   - DELETE /api/files/delete - 刪除檔案
   - GET /api/files/metadata/:fileUrl - 取得檔案資訊
   - POST /api/files/download-url - 生成時效性下載連結
   - GET /api/files/test-connection - Firebase 連接診斷

3. 服務層架構
   - FileUploadService: 核心檔案上傳邏輯
   - FileUploadController: API 請求處理
   - Firebase 配置管理與自動初始化

4. 安全性與驗證
   - JWT Token 認證保護所有端點
   - Firebase 配置檢查中間件
   - 檔案類型、大小、數量驗證
   - 錯誤處理與資源清理機制

5. 開發者工具
   - 完整的整合測試覆蓋
   - TypeScript 型別定義
   - Swagger API 文件
   - Firebase 連接狀態診斷工具

環境設定：
- 新增 Firebase 環境變數支援（FIREBASE_SERVICE_ACCOUNT_PATH, FIREBASE_STORAGE_BUCKET）
- 更新 .env.example 範例配置
- Postman 集合新增檔案上傳測試端點

技術架構：
- 整合 Firebase Admin SDK
- 使用 formidable 處理 multipart/form-data
- 支援公開和私有檔案存取模式
- 自動清理暫存檔案機制

--- a/.env.example
+++ b/.env.example
@@ -17,6 +17,6 @@ PORT=8080
 LOG_LEVEL=debug
 JWT_EXPIRES_DAY=30d
 JWT_SECRET=666
-# 需申請 firebase 才可正常運作，或是移除 upload router
-# FIREBASE_SERVICE_ACCOUNT= 
-# FIREBASE_STORAGE_BUCKET=
+# Firebase 檔案上傳設定
+# FIREBASE_SERVICE_ACCOUNT_PATH=/path/to/firebase-adminsdk-service-account.json
+# FIREBASE_STORAGE_BUCKET=your-firebase-storage-bucket.appspot.com
