✨ feat(payment): 實作 ECPay 付款整合系統
新增完整的 ECPay 付款整合功能，包含建立付款連結、狀態查詢、回調處理等功能。

調整項目：
1. src/config/schemas/payment.ts - 新增 ECPay 付款相關的 Swagger Schema 定義
2. src/controllers/PaymentController.ts - 建立付款控制器，處理付款相關 HTTP 請求
3. src/routes/paymentRoutes.ts - 定義付款路由，包含建立付款連結、狀態查詢、回調處理
4. src/services/PaymentService.ts - 實作付款服務層，處理 ECPay API 整合邏輯
5. src/utils/ecpayHelper.ts - 新增 ECPay 工具函式，處理 CheckMacValue 生成與回應驗證

--- a/.env.example
+++ b/.env.example
@@ -20,3 +20,15 @@ JWT_SECRET=666
 # Firebase 檔案上傳設定
 # FIREBASE_SERVICE_ACCOUNT_PATH=/path/to/firebase-adminsdk-service-account.json
 # FIREBASE_STORAGE_BUCKET=your-firebase-storage-bucket.appspot.com
+
+# 綠界金流設定 (測試環境)
+ECPAY_MERCHANT_ID=2000132
+ECPAY_HASH_KEY=5294y06JbISpM5x9
+ECPAY_HASH_IV=v77hoKGq4kWxNNIS
+ECPAY_API_URL=https://payment-stage.ecpay.com.tw/Cashier/AioCheckOut/V5
+
+# API 基礎網址 (用於綠界回調)
+API_BASE_URL=https://yourdomain.com
+
+# 前端網址 (用於付款完成後重導向)
+FRONTEND_URL=http://localhost:3000
