--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "cors": "^2.8.5",
     "dayjs": "^1.11.13",
     "dotenv": "^16.4.5",
+    "ecpay_aio_nodejs": "^1.2.2",
     "express": "^4.18.2",
     "firebase-admin": "^13.0.2",
     "formidable": "^3.5.2",
