--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "joi": "^18.0.0",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
+    "node-cron": "^4.2.1",
     "pg": "^8.13.1",
     "pino": "^9.6.0",
     "pino-http": "^10.3.0",
@@ -59,6 +60,7 @@
     "@types/jsonwebtoken": "^9.0.6",
     "@types/morgan": "^1.9.9",
     "@types/node": "^20.11.30",
+    "@types/node-cron": "^3.0.11",
     "@types/pg": "^8.11.2",
     "@types/pino-http": "^6.1.0",
     "@types/supertest": "^6.0.2",
