✨ feat(scripts): 新增預約資料管理腳本和學生ID參數支援

--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "start:prod": "node dist/src/bin/www.js",
     "init:schema": "typeorm schema:sync -d ./dist/db/data-source.js",
     "db:seed": "ts-node -r tsconfig-paths/register ./src/scripts/seed-database.ts",
+    "generate-past-reservations": "ts-node -r tsconfig-paths/register ./src/scripts/generatePastReservations.ts",
+    "reset-reservations": "ts-node -r tsconfig-paths/register ./src/scripts/resetReservations.ts",
+    "generate-future-reservations": "ts-node -r tsconfig-paths/register ./src/scripts/generateFutureReservations.ts",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "lint:check": "eslint . --max-warnings 0",
